k8s/base/api/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "5050"
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: api
          image: shokohsc/moleculer-ouistity
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          args:
            - services/api-gateway.service.js
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
            - name: metrics
              containerPort: 5050
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              port: http
              path: /status/readiness
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 2000m
              memory: 1024M
